--- a/Assets/Hotfix/Unity.Hotfix.asmdef
+++ b/Assets/Hotfix/Unity.Hotfix.asmdef
@@ -6,7 +6,8 @@
         "GUID:89fdb54e773827b40b9127329bdaed75",
         "GUID:0d1ae7fff56963548a2a2a16dab3c5c6",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:174b432621f01fb418be26ffc6c90e22"
+        "GUID:174b432621f01fb418be26ffc6c90e22",
+        "GUID:e34a5702dd353724aa315fb8011f08c3"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
