--- a/Unity.Model.csproj
+++ b/Unity.Model.csproj
@@ -312,6 +312,8 @@
     <Compile Include="Assets\Framework\Runtime\Core\Manager\Bridge\BridgeManager.cs" />
     <Compile Include="Assets\Framework\Runtime\Core\Awaiter\AssetBundleCreateRequestAwaiter.cs" />
     <Compile Include="Assets\Framework\Combat\CombatLogic\Runtime\Core\Combat\AbilityEffect\AbilityEffectComponent\AbilityEffectAddStatusComponent.cs" />
+    <Compile Include="Assets\Framework\Runtime\Core\Manager\ModelPool\ModelPoolManager.cs" />
+    <Compile Include="Assets\Framework\Runtime\Core\Manager\ModelPool\ModelBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Framework\Unity.Model.asmdef" />
