--- a/Unity.Model.csproj
+++ b/Unity.Model.csproj
@@ -1067,6 +1067,10 @@
       <Project>{0E07D9BD-8418-6FA4-7A89-7F6CB0E9C8B1}</Project>
       <Name>Unity.3rdPlugin</Name>
     </ProjectReference>
+    <ProjectReference Include="LoopScrollRect.Runtime.csproj">
+      <Project>{E9505C4B-2DF9-C2B3-F3E2-ECB7DF3B049E}</Project>
+      <Name>LoopScrollRect.Runtime</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
