--- a/Unity.Hotfix.csproj
+++ b/Unity.Hotfix.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Assets\Hotfix\Runtime\Core\Module\EventSystem\Event\EventType.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Object\Game.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Archive\ResolutionType.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\LoopScrollRect\LoopScroll.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Archive\UserData.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Object\Pool\APool.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\UI\UIPanel.cs" />
@@ -129,6 +130,8 @@
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\UIEvent\UIEventManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Command\CommandData.cs" />
     <Compile Include="Assets\Hotfix\Logic\Camera\CameraController.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\LoopScrollRect\LoopScrollItem.cs" />
+    <Compile Include="Assets\Hotfix\Runtime\Core\LoopScrollRect\LoopScrollItemPool.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\UIEvent\UIEventHandlerAttribute.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Audio\AudioManager.cs" />
     <Compile Include="Assets\Hotfix\Runtime\Core\Manager\Panel\MVVM\View\Binding\ViewModelBinding.cs" />
